
    - update: "Announcer.wx.lua"  / by pulsar
        - fixed small issue with blacklist/whitelist dialog window  / thx Sopor
            - disable announcer window in background till popup is open
        - changed about window
            - added new license
            - added jrock as new project member
        - removed unneeded commented code parts

    - update: "Announcer.wx.lua" / by jrock
        - tab 3:
            - changed "textctrl_category" input field into a "choicectrl_category" selection
            - changed "choicectrl_category" to sort categories by name
            - fixed "textctrl_command" and "textctrl_alibinick" to avoid whitespaces in fields after restart
            - added "choicectrl_maxage" to select max-age of release to be announced
            - fixed "del_folder()" function on whitelist/blacklist window if no TAG was selected
        - tab 4:
            - changed "del_rule()" function
                - fix bug who delete btn caused a fatal error if no rule was selected
            - changed "add_rule()" function
                - check if rule name already exists
            - added "rule_clone_button" button
            - disable clone rule buttons while connected to hub as expected
        - tab_5 / tab_6
            - moved existing "tab_5" to "tab_6"
        - tab_5
            - added new tab for "categories" on tab position 5
            - added "categories_listbox" element
            - changed "categories_listbox" to sort categories by name
            - added "import_categories_tbl()" function
                - import categories from "cfg/rules.lua" to "cfg/categories.lua"
            - added "add_category()" function
                - check if category name contain whitespaces
                - check if category name already exists
            - added "del_category()" function
                - check if category name is selected on a rule
        - tab_6
            - show filesize of log file

    - global: