@@ -16,6 +16,7 @@ v0.8 [2015-]
             - added new license
             - added jrock as new project member
         - removed unneeded commented code parts
+        - added optional parameter "both" for log_handler() function
 
     - update: "Announcer.wx.lua" / by jrock
         - tab 3:
